Deliberate failing a workflow

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,9 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Step 1 - Echo a string
-        run: echo "Hello World!"
+        run: eccho "Hello World!"
       - name: Step 2 - Multiline script
         run: |
           npm -v
           node -v
-          
