--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,6 +5,10 @@ jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
+      - name: List files and print current directory
+        run: |
+          pwd
+          ls 
       - name: Simple Javascript Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
